syntax="proto3";

package velmie.wallet.files;
option go_package = "files";

message FileReq {
  uint64 id = 1;
}

message FileResp {
  uint64 id = 1;
  string location = 2;
}

message BinaryFileResp {
  bytes data = 1;
  int64 size = 2;
  string contentType = 3;
}

message UserHasFilesReq {
  string uid = 1;
  repeated string excludeCategories = 2;
}

message UserHasFilesResp {
  bool filesExist = 1;
}

message UploadFileReq {
  bytes bytes = 1;
  string fileName = 2;
  string uid = 3;
  bool adminOnly = 4;
  bool private = 5;
  string category = 6;
}

message UploadFileResp {
  uint64 id = 1;
  string location = 2;
}

service ServiceFiles {
  rpc GetFile(FileReq) returns (FileResp);
  rpc DownloadFile(FileReq) returns (BinaryFileResp);
  rpc UserHasFiles(UserHasFilesReq) returns (UserHasFilesResp);
  rpc UploadFile(UploadFileReq) returns (UploadFileResp);
}
